fix: main과 develope 브랜치 규칙 수정
main과 develope 브랜치도 feature, hotfix, release 등으로 시작했어야 하는 버그 수정

--- a/.github/workflows/Validate-Branch-Naming-Commit-Message-and-Release-Version.yml
+++ b/.github/workflows/Validate-Branch-Naming-Commit-Message-and-Release-Version.yml
@@ -24,7 +24,9 @@ jobs:
         if: startsWith(github.ref, 'refs/heads/')
         run: |
           BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-          if [[ ! "$BRANCH_NAME" =~ ^(feature|release|hotfix)\/[a-zA-Z0-9_-]+$ ]]; then
+          if [[ "$BRANCH_NAME" == "main" || "$BRANCH_NAME" == "develop" ]]; then
+            echo "Skipping branch name validation for 'main' or 'develop' branch."
+          elif [[ ! "$BRANCH_NAME" =~ ^(feature|release|hotfix)\/[a-zA-Z0-9_-]+$ ]]; then
             echo "❌ Branch name '$BRANCH_NAME' does not follow the naming convention."
             exit 1
           fi
