--- a/.github/workflows/Unity-Test.yml
+++ b/.github/workflows/Unity-Test.yml
@@ -11,7 +11,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Unity
-      uses: game-ci/unity-builder@v2
+      uses: game-ci/unity-builder@v4
+      env:
+        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
       with:
         unityVersion: 2022.3.17f1
 
