--- a/.github/workflows/Unity-Test.yml
+++ b/.github/workflows/Unity-Test.yml
@@ -3,30 +3,60 @@ name: Unity Test
 on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  unity-tests:
+    name: Run Unity Tests (PlayMode and EditMode)
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-2022
+        unityVersion:
+          - 2022.3.17f1
+        testMode:
+          - playmode
+          - editmode
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      ###########################
+      #         Checkout        #
+      ###########################
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          lfs: true
 
-    - name: Set up Unity
-      uses: game-ci/unity-builder@v4
-      env:
-        UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-        UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-        UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-      with:
-        unityVersion: 2022.3.17f1
+      ###########################
+      #         Setup Unity     #
+      ###########################
+      - name: Set up Unity
+        uses: game-ci/unity-builder@v4
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+        with:
+          unityVersion: ${{ matrix.unityVersion }}
 
-    - name: Run Unity tests Playmode
-      uses: game-ci/unity-test-runner@v2
-      with:
-        unityVersion: 2022.3.17f1
-        testMode: playmode
+      ###########################
+      #          Cache          #
+      ###########################
+      - uses: actions/cache@v4
+        with:
+          path: ${{ matrix.projectPath }}/Library
+          key: Library-${{ matrix.os }}-${{ matrix.unityVersion }}-${{ matrix.testMode }}
+          restore-keys: |
+            Library-${{ matrix.os }}-${{ matrix.unityVersion }}
 
-    - name: Run Unity tests Editmode
-      uses: game-ci/unity-test-runner@v2
-      with:
-        unityVersion: 2022.3.17f1
-        testMode: editmode
+      ###########################
+      #      Run Unity Tests     #
+      ###########################
+      - name: Run ${{ matrix.testMode }} tests
+        run: |
+          xvfb-run --auto-servernum --server-args='-screen 0 640x480x24' \
+          unity-editor \
+            -projectPath . \
+            -runTests \
+            -testPlatform ${{ matrix.testMode }} \
+            -logfile /dev/stdout \
+            -testResults /test-results.xml
