ci: 닷넷 검사 실행 수정

--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -19,4 +19,7 @@ jobs:
       run: dotnet tool install -g dotnet-format
 
     - name: Run dotnet-format
-      run: dotnet format --check --verbosity diagnostic
+      run: |
+        dotnet format --check --folder . --verbosity diagnostic
+      env:
+        PATH: ${{ runner.tool_cache }}/dotnet:$PATH
