--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -20,4 +20,4 @@ jobs:
 
     - name: Run dotnet-format
       run: |
-        dotnet format --verbosity diagnostic
+        run: dotnet format --verify-no-changes --verbosity diagnostic
