--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -15,9 +15,8 @@ jobs:
       with:
         dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
 
-    - name: Install dotnet-format tool
-      run: dotnet tool install -g dotnet-format
+    - name: Restore dependencies
+      run: dotnet restore
 
     - name: Run dotnet-format
-      run: |
-        run: dotnet format --verify-no-changes --verbosity diagnostic
+      run: dotnet format --verify-no-changes --verbosity diagnostic
