--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -15,8 +15,5 @@ jobs:
       with:
         dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
 
-    - name: Restore dependencies
-      run: dotnet restore ./Scripts.csproj
-
     - name: Run dotnet-format
-      run: dotnet format --verify-no-changes --verbosity diagnostic
+      run: dotnet format ./Scripts.csproj --verify-no-changes --verbosity diagnostic
