--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -7,13 +7,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v3
     - name: Setup .NET
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
-
-    - name: Run dotnet-format
-      run: dotnet format ./Scripts.csproj --verify-no-changes --verbosity diagnostic
+        dotnet-version: 8.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Format
+      run: dotnet format --verify-no-changes --verbosity diagnostic
