--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -3,16 +3,29 @@ name: .NET Linting
 on: [push, pull_request]
 
 jobs:
-  lint:
+  check-code-style:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Install .NET Core SDK
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Format
-      run: dotnet format --verify-no-changes --verbosity diagnostic
+        dotnet-version: '7.x'
+
+    - name: Install Unity dependencies
+      run: sudo apt-get install -y libgtk-3-dev
+
+    - name: Install dotnet format tool
+      run: dotnet tool install -g dotnet-format
+
+    - name: Run dotnet format to check code style
+      run: dotnet format --check --severity info
+      env:
+        DOTNET_ROOT: /home/runner/.dotnet/tools
+
+    - name: Fail if formatting issues are found
+      if: failure()
+      run: echo "Code style issues detected. Please fix them before merging."
