--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -3,29 +3,20 @@ name: .NET Linting
 on: [push, pull_request]
 
 jobs:
-  check-code-style:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: Install .NET Core SDK
-      uses: actions/setup-dotnet@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '7.x'
+        dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
 
-    - name: Install Unity dependencies
-      run: sudo apt-get install -y libgtk-3-dev
+    - name: Restore dependencies
+      run: dotnet restore ./Github-Action-Test.sln
 
-    - name: Install dotnet format tool
-      run: dotnet tool install -g dotnet-format
-
-    - name: Run dotnet format to check code style
-      run: dotnet format --check --severity info
-      env:
-        DOTNET_ROOT: /home/runner/.dotnet/tools
-
-    - name: Fail if formatting issues are found
-      if: failure()
-      run: echo "Code style issues detected. Please fix them before merging."
+    - name: Run dotnet-format
+      run: dotnet format Github-Action-Test.sln --verify-no-changes --verbosity diagnostic
