--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -16,7 +16,7 @@ jobs:
         dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
     
     - name: Change directory to solution folder
-      run: cd..  # .sln 파일이 있는 경로로 변경
+      run: cd ./Github-Action-Test  # .sln 파일이 있는 경로로 변경
 
     #- name: Restore dependencies
     #  run: dotnet restore ./Github-Action-Test/Github-Action-Test.sln
