--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -22,4 +22,4 @@ jobs:
     #  run: dotnet restore ./Github-Action-Test/Github-Action-Test.sln
 
     - name: Run dotnet-format
-      run: dotnet format /home/runner/work/Github-Action-Test/Github-Action-Test.sln --verify-no-changes --verbosity diagnostic
+      run: dotnet format /home/runner/work/Github-Action-Test/Scripts.csproj --verify-no-changes --verbosity diagnostic
