--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -15,6 +15,9 @@ jobs:
       with:
         dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
 
+    - name: Show the current working directory
+      run: pwd  # 현재 작업 디렉터리 출력
+
     - name: Restore dependencies
       run: dotnet restore /home/runner/work/Github-Action-Test/Scripts.csproj
 
