--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -13,13 +13,10 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.x'  # 사용하고 있는 .NET 버전에 맞게 설정
-
-    - name: Show the current working directory
-      run: pwd  # 현재 작업 디렉터리 출력
+        dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
 
     - name: Restore dependencies
-      run: dotnet restore ./Scripts.csproj
+      run: dotnet restore ./Github-Action-Test.sln
 
     - name: Run dotnet-format
-      run: dotnet format ./Scripts.csproj --verify-no-changes --verbosity diagnostic
+      run: dotnet format ./Github-Action-Test.sln --verify-no-changes --verbosity diagnostic
