--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -10,6 +10,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Check Dotnet Version
+      run: dotnet --info
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
