--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
+        dotnet-version: '8.0.401'  # 사용하고 있는 .NET 버전에 맞게 설정
 
     - name: Restore dependencies
       run: dotnet restore ./Github-Action-Test.sln
