--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -10,13 +10,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Check Dotnet Version
-      run: dotnet --info
+    - name: Clear NuGet cache
+      run: dotnet nuget locals all --clear
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.401'  # 사용하고 있는 .NET 버전에 맞게 설정
+        dotnet-version: '8.0.8'  # 사용하고 있는 .NET 버전에 맞게 설정
 
     - name: Restore dependencies
       run: dotnet restore ./Github-Action-Test.sln
