--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -19,7 +19,10 @@ jobs:
         dotnet-version: '8.0.401'  # 사용하고 있는 .NET 버전에 맞게 설정
 
     - name: Restore dependencies
-      run: dotnet restore ./Github-Action-Test.sln
+      run: dotnet restore ./Github-Action-Test.sln --no-cache
+
+    - name: Build the solution
+      run: dotnet build ./Github-Action-Test.sln --no-restore
 
     - name: Run dotnet-format
       run: dotnet format ./Github-Action-Test.sln --verify-no-changes --verbosity diagnostic
