--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -16,13 +16,13 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '4.7.1'  # 사용하고 있는 .NET 버전에 맞게 설정
+        dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
 
     - name: Restore dependencies
-      run: dotnet restore ./Github-Action-Test.sln --no-cache
+      run: dotnet restore ./Scripts.csproj --no-cache
 
     - name: Build the solution
-      run: dotnet build ./Github-Action-Test.sln --no-restore --configuration Release
+      run: dotnet build ./Scripts.csproj --no-restore --configuration Release
 
     - name: Run dotnet-format
-      run: dotnet format ./Github-Action-Test.sln --verify-no-changes --verbosity diagnostic
+      run: dotnet format ./Scripts.csproj --verify-no-changes --verbosity diagnostic
