--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ./Scripts.csproj --no-cache
 
-    - name: Build the solution
-      run: dotnet build ./Scripts.csproj --no-restore --configuration Release
+    #- name: Build the solution
+    #  run: dotnet build ./Scripts.csproj --no-restore --configuration Release
 
     - name: Run dotnet-format
       run: dotnet format ./Scripts.csproj --verify-no-changes --verbosity diagnostic
