--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -15,7 +15,7 @@ jobs:
           dotnet-version: '5.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore ./Scripts.csproj
 
       - name: Build the project
         run: dotnet build --no-restore --configuration Release
