--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -11,7 +11,7 @@ jobs:
 
       - name: Install .NET Framework 4.0 Developer Pack
         run: |
-          Invoke-WebRequest -Uri "https://download.microsoft.com/download/B/4/8/B48EAA12-083C-4FB6-9CB8-5FF70F62A116/dotNetFx40_Full_x86_x64.exe" -OutFile dotNetFx40_Full_x86_x64.exe
+          Invoke-WebRequest -Uri "https://download.visualstudio.microsoft.com/download/pr/1234567890/file.dotNetFx40_Full_x86_x64.exe" -OutFile dotNetFx40_Full_x86_x64.exe
           Start-Process -FilePath dotNetFx40_Full_x86_x64.exe -ArgumentList "/q" -Wait
         
       - name: Setup .NET
