--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -13,10 +13,15 @@ jobs:
     - name: Clear NuGet cache
       run: dotnet nuget locals all --clear
 
+    - name: Install .NET Framework 4.8 Developer Pack
+      run: |
+        Invoke-WebRequest -Uri "https://go.microsoft.com/fwlink/?linkid=2099382" -OutFile dotnetfx471.exe
+        Start-Process -FilePath dotnetfx471.exe -ArgumentList "/q" -Wait
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '6.x'  # 사용하고 있는 .NET 버전에 맞게 설정
+        dotnet-version: '5.x'  # 사용하고 있는 .NET 버전에 맞게 설정
 
     - name: Restore dependencies
       run: dotnet restore ./Scripts.csproj --no-cache
