--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -15,13 +15,13 @@ jobs:
 
     - name: Install .NET Framework 4.8 Developer Pack
       run: |
-        Invoke-WebRequest -Uri "https://go.microsoft.com/fwlink/?linkid=2099382" -OutFile dotnetfx471.exe
-        Start-Process -FilePath dotnetfx471.exe -ArgumentList "/q" -Wait
+        Invoke-WebRequest -Uri "https://download.microsoft.com/download/1/B/E/1BE39E79-7E39-46A3-96FF-047F95396215/dotNetFx40_Full_setup.exe" -OutFile dotnetfx40.exe
+        Start-Process -FilePath dotnetfx40.exe -ArgumentList "/q" -Wait
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '5.x'  # 사용하고 있는 .NET 버전에 맞게 설정
+        dotnet-version: '4.x'  # 사용하고 있는 .NET 버전에 맞게 설정
 
     - name: Restore dependencies
       run: dotnet restore ./Scripts.csproj --no-cache
