--- a/Scripts.csproj
+++ b/Scripts.csproj
@@ -2,6 +2,11 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <!-- Generated file, do not modify, your changes will be overwritten (use AssetPostprocessor.OnGeneratedCSProject) -->
   <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <!-- CI 환경에서 분석기 비활성화 -->
+    <RunAnalyzers Condition="'$(CI)' != 'true'">false</RunAnalyzers>
+  </PropertyGroup>
+  <PropertyGroup>
     <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
