--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -16,7 +16,7 @@ jobs:
         dotnet-version: '6.0.x'
 
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore ./
 
     - name: Run code format check
-      run: dotnet format --verify-no-changes
+      run: dotnet format ./ --verify-no-changes
