--- a/.github/workflows/Linting.yml
+++ b/.github/workflows/Linting.yml
@@ -19,4 +19,4 @@ jobs:
       run: dotnet restore ./Scripts.csproj
 
     - name: Run code format check
-      run: dotnet format ./ --verify-no-changes
+      run: dotnet format ./Scripts.csproj --verify-no-changes
