--- a/Assets/.editorconfig
+++ b/Assets/.editorconfig
@@ -7,7 +7,7 @@ indent_style = space
 indent_size = 4
 dotnet_diagnostic.IDE0055.severity = error
 charset = utf-8
-end_of_line = crlf
+end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
